--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/2.basic-sql-operations-of-mysql-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/2.basic-sql-operations-of-mysql-mode.md
@@ -13,7 +13,7 @@ obclient> CREATE DATABASE db1 DEFAULT CHARACTER SET UTF8 READ WRITE;
 Query OK, 1 row affected
 ```
 
-更多 `CREATE DATABASE` 语句相关的语法说明，请参见 [CREATE DATABASE](../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/11.create-database.md) 章节。
+更多 `CREATE DATABASE` 语句相关的语法说明，请参见 [CREATE DATABASE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 章节。
 
 创建完成后，可以通过 `SHOW DATABASES` 命令查看当前数据库服务器中所有的数据库。
 
@@ -47,7 +47,7 @@ obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(3));
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) 章节。
+更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 章节。
 
 ### 查看表
 
@@ -68,8 +68,6 @@ Query OK, 0 rows affected
   ) DEFAULT CHARSET = utf8mb4 ROW_FORMAT = DYNAMIC COMPRESSION = 'zstd_1.3.8' REPLICA_NUM = 1 BLOCK_SIZE = 16384 USE_BLOOM_FILTER = FALSE TABLET_SIZE = 134217728 PCTFREE = 0
   1 row in set
   ```
-
-
 
 * 使用 `SHOW TABLES` 语句查看 `db1` 数据库中的所有表。
 
@@ -152,7 +150,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/10.alter-table-1.md) 章节。
+更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md) 章节。
 
 ### 删除表
 
@@ -165,7 +163,7 @@ obclient> DROP TABLE test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP TABLE` 语句相关的语法说明,请参见 [DROP TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/39.drop-table-1.md) 章节。
+更多 `DROP TABLE` 语句相关的语法说明,请参见 [DROP TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/27.drop-table-of-mysql-mode.md) 章节。
 
 ## 索引操作
 
@@ -191,7 +189,7 @@ obclient> CREATE INDEX test_index ON test (c1, c2);
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) 章节。
+更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/12.create-index-of-mysql-mode.md) 章节。
 
 ### 查看索引
 
@@ -260,7 +258,7 @@ obclient> DROP INDEX test_index ON test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/32.drop-index-1.md) 章节。
+更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/24.drop-index-of-mysql-mode.md) 章节。
 
 ## 插入数据
 
@@ -308,7 +306,7 @@ Query OK, 0 rows affected
   4 rows in set
   ```
 
-更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) 章节。
+更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/37.insert-of-mysql-mode.md) 章节。
 
 ## 删除数据
 
@@ -448,7 +446,7 @@ Query OK, 0 rows affected
   Empty set
   ```
 
-更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/1.DELETE-1.md) 章节。
+更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.delete-of-mysql-mode.md) 章节。
 
 ## 更新数据
 
@@ -586,7 +584,7 @@ Query OK, 0 rows affected
   4 rows in set
   ```
 
-更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/6.UPDATE-1.md) 章节。
+更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/60.update-of-mysql-mode.md) 章节。
 
 ## 查询数据
 
@@ -651,7 +649,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/51.SELECT-1-2/1.SELECT.md) 章节。
+更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/51.select-of-mysql-mode/1.select-of-mysql-mode.md) 章节。
 
 ## 提交事务
 
@@ -715,7 +713,7 @@ obclient> SELECT * FROM t_insert;
 4 rows in set
 ```
 
-更多事务控制语句相关的说明请参见 [关于事务控制语句](../../3.developer-guide/2.application-development-based-on-mysql-mode/5.about-dml-statements-and-transactions/2.transaction/1.about-transactional-control-statements.md)。
+更多事务控制语句相关的说明请参见 [事务管理概述](../../3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md)。
 
 ## 回滚事务
 
@@ -789,4 +787,4 @@ obclient> SELECT * FROM t_insert;
 4 rows in set
 ```
 
-更多事务控制语句相关的说明，请参见 [关于事务控制语句](../../3.developer-guide/2.application-development-based-on-mysql-mode/5.about-dml-statements-and-transactions/2.transaction/1.about-transactional-control-statements.md)。
+更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/1.transaction-management-overview-of-mysql-mode.md)。
