--- a/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/3.basic-sql-operations-of-oracle-mode.md
+++ b/zh-CN/2.quickstart/2.get-started-with-oceanbase-sql.md/3.basic-sql-operations-of-oracle-mode.md
@@ -21,7 +21,7 @@ obclient> CREATE TABLE test (c1 INT PRIMARY KEY, c2 VARCHAR(3));
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/24.create-table-1.md) 章节。
+更多 `CREATE TABLE` 语句相关的语法说明，请参见 [CREATE TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/24.create-table-of-oracle-mode.md) 章节。
 
 ### 修改表
 
@@ -83,7 +83,7 @@ Query OK, 0 rows affected
   2 rows in set
   ```
 
-更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/10.alter-table-1.md) 章节。
+更多 `ALTER TABLE` 语句相关的语法说明，请参见 [ALTER TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/10.alter-table-of-oracle-mode.md) 章节。
 
 ### 删除表
 
@@ -96,7 +96,7 @@ obclient> DROP TABLE test;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP TABLE` 语句相关的语法说明，请参见 [DROP TABLE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/39.drop-table-1.md) 章节。
+更多 `DROP TABLE` 语句相关的语法说明，请参见 [DROP TABLE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/39.drop-table-of-oracle-mode.md) 章节。
 
 ## 索引操作
 
@@ -122,7 +122,7 @@ obclient> CREATE INDEX test_index ON test (c1, c2);
 Query OK, 0 rows affected
 ```
 
-更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/16.create-index-1.md) 章节。
+更多 `CREATE INDEX` 语句相关的语法说明，请参见 [CREATE INDEX](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/16.create-index-of-oracle-mode.md) 章节。
 
 ### 查看索引
 
@@ -302,7 +302,7 @@ obclient> DROP INDEX test_index;
 Query OK, 0 rows affected
 ```
 
-更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/1.DDL-1/32.drop-index-1.md) 章节。
+更多 `DROP INDEX` 语句相关的语法说明，请参见 [DROP INDEX](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/32.drop-index-of-oracle-mode.md) 章节。
 
 ## 插入数据
 
@@ -369,7 +369,7 @@ Query OK, 0 rows affected
   3 rows in set
   ```
 
-更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) 章节。
+更多 `INSERT` 语句相关的语法，请参见 [INSERT](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/2.insert-of-oracle-mode.md) 章节。
 
 ## 删除数据
 
@@ -391,7 +391,7 @@ obclient> SELECT * FROM t1;
 2 rows in set
 ```
 
-更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/1.DELETE-1.md) 章节。
+更多 `DELETE` 语句相关的语法说明，请参见 [DELETE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/1.delete-of-oracle-mode.md) 章节。
 
 ## 更新数据
 
@@ -433,7 +433,7 @@ obclient> SELECT * FROM t1;
   2 rows in set
   ```
 
-更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/6.UPDATE-1.md) 章节。
+更多 `UPDATE` 语句相关的语法，请参见 [UPDATE](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/6.update-of-oracle-mode.md) 章节。
 
 ## 查询数据
 
@@ -498,7 +498,7 @@ obclient> SELECT * FROM t1;
   2 rows in set
   ```
 
-更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/6.sql-syntax/3.common-tenant-oracle-mode/9.sql-statement-1/2.DML/5.SELECT-1/1.simple-select.md) 章节。
+更多 `SELECT` 语句相关的语法说明，请参见 [SELECT](../../7.reference/4.development-guide-refactoring/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/2.dml-of-oracle-mode/5.select-of-oracle-mode/1.simple-select-of-oracle-mode.md) 章节。
 
 ## 提交事务
 
@@ -556,7 +556,7 @@ obclient> SELECT * FROM t_insert;
 4 rows in set
 ```
 
-更多事务控制语句相关的说明，请参见 [关于事务控制语句](../../3.developer-guide/3.Application-development-based-on-Oracle-mode/5.about-DML-statements-and-transactions/02.transactions/01.about-transaction-control-statement.md)。
+更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
 
 ## 回滚事务
 
@@ -624,4 +624,4 @@ obclient> SELECT * FROM t_insert;
 3 rows in set
 ```
 
-更多事务控制语句相关的说明，请参见 [关于事务控制语句](../../3.developer-guide/3.Application-development-based-on-Oracle-mode/5.about-DML-statements-and-transactions/02.transactions/01.about-transaction-control-statement.md)。
+更多事务控制语句相关的说明，请参见 [事务管理概述](../../3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md)。
