400e部署faq中操作系统内容更新

--- a/zh-CN/8.FAQ/3.deployment-faq.md
+++ b/zh-CN/8.FAQ/3.deployment-faq.md
@@ -12,16 +12,15 @@
 如果需要 OCP 管控服务提供高可用能力，则需要 3 台管控服务器，并提供负载均衡软件或者硬件，例如 F5、阿里云 SLB，或者使用 OceanBase 数据库提供的 ob_dns 软负载组件，进行三节点部署。
 支持在下表所示的 Linux 操作系统中安装 OceanBase 数据库。
 
-| **Linux操作系统** | **版本** | **服务器架构** |
-|-----------------------------------|-------------|-----------------------------------|
-| AliOS                             | 7.2 及以上   | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾） |
-| CentOS / Red Hat Enterprise Linux | 7.2 及以上 <blockquote><b>说明</b></br>暂不支持 CentOS 8.X。</blockquote>  | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾） |
-| KylinOS                           | V10         | x86_64（包括海光），ARM_64（仅支持鲲鹏、飞腾） |
-| 龙蜥 AnolisOS                     | 8.6 及以上   | x86_64（包括海光），ARM_64（鲲鹏）|
-| 统信 UOS                          | 1020a/1021a/1021e/1001c | x86_64（包括海光），ARM_64（鲲鹏）|
-| 中科方德 NFSChina                 | 4.0 及以上     | x86_64（包括海光），ARM_64（鲲鹏）|
-| 浪潮 Inspur kos                   | 5.8           | x86_64（包括海光），ARM_64（鲲鹏）|
-| 中移动 BCLinux                    | BigCloud Enterprise Linux For Euler 21.10 LTS | x86_64（包括海光），ARM_64（鲲鹏）|
+| Linux操作系统 | 版本 | 服务器架构 |
+|--------------------------|-----------|-------------------------------|
+| AliOS | 7.2 及以上 | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+| 龙蜥 AnolisOS | 8.6 及以上 | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+| KylinOS | V10 | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
+| 统信 UOS | V20 | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+| 中科方德 NFSChina | 4.0 及以上 | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+| 浪潮 Inspur kos | 5.8 | x86_64（包括海光），ARM_64（鲲鹏、飞腾）|
+| CentOS / Red Hat Enterprise Linux | 7.2 及以上 <blockquote><b>说明</b></br>暂不支持 CentOS 8.X。</blockquote> | x86_64（包括海光），ARM_64（鲲鹏、飞腾） |
 
 > **说明**
 >
