--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 * 请确认已下载并安装了 OBClient 应用。如果未下载 OBClient 应用，您可以访问 [软件中心](https://open.oceanbase.com/softwareCenter/community) 下载对应版本的 OBClient。
 
-* 连接租户前，请确认当前客户端在租户白名单中，租户白名单的查询及设置具体操作请参见 [设置和查看租户白名单](../../6.basic-database-management/4.manage-tenants-1/6.configure-and-view-the-tenant-whitelist.md)。
+* 连接租户前，请确认当前客户端在租户白名单中，租户白名单的查询及设置具体操作请参见 [设置和查看租户白名单](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/6.configure-and-view-the-tenant-whitelist.md)。
 
 ## 连接操作
 
