--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/1.view-the-execution-plan-of-mysql-mode.md
@@ -2,9 +2,9 @@
 
 执行计划是对一条 SQL 查询语句在数据库中执行过程的描述，通常用于分析某条 SQL 的性能问题，读懂执行计划是 SQL 优化的先决条件。用户可以通过 EXPLAIN 命令查看优化器针对指定 SQL 生成的逻辑执行计划。
 
-有关 SQL 执行计划的详细信息，请参见 [SQL 执行计划](../../../../3.user-guide/9.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md)。
+有关 SQL 执行计划的详细信息，请参见 [SQL 执行计划](../../../../7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/1.introduction-to-sql-execution-plans.md)。
 
-有关分布式执行计划的详细信息，请参见 [分布式执行计划管理](../../../../3.user-guide/9.sql-optimization/3.distributed-execution-plan/4.distributed-execution-plan-management.md)。
+有关分布式执行计划的详细信息，请参见 [分布式执行计划管理](../../../../7.reference/3.performance-tuning-guide/5.sql-optimization/3.distributed-execution-plan/4.distributed-execution-plan-management.md)。
 
 ## EXPLAIN 命令格式
 
