--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/2.understand-the-execution-plan-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/9.execution-plan-of-mysql-mode/2.understand-the-execution-plan-of-mysql-mode.md
@@ -317,4 +317,4 @@ Outputs & filters:
 | equal_conds | 等值联接，左右两侧的联接列会用于计算哈希值。                                      |
 | other_conds | 其他联接条件。 例如 Q6 查询中的 `t1.c2 + t2.d2 > 1`。     |
 
-关于执行计划的详细信息，请参考 [SQL 调优](../../../../3.user-guide/9.sql-optimization/4.sql-optimization-1/1.overview-of-sql-optimization.md) 章节。
+关于执行计划的详细信息，请参考 [SQL 调优](../../../../7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/1.overview-of-sql-optimization.md) 章节。
