--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/1.transaction-management-overview-of-oracle-mode.md
@@ -36,7 +36,7 @@
 
 ## 相关文档
 
-* [开启事务](2.start-a-transaction.md)
+* [开启事务](2.start-a-transaction-of-oracle-mode.md)
 
 * [事务保存点](3.transaction-savepoints-of-oracle/1.mark-a-savepoint.md)
 
