--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/5.transaction-management-of-oracle-mode/4.submit-transaction-of-oracle-mode.md
@@ -123,4 +123,4 @@ obclient [SYS]> SELECT * FROM ordr;
 
 ## 相关文档
 
-* [开启事务](2.start-a-transaction.md)
+* [开启事务](2.start-a-transaction-of-oracle-mode.md)
