--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/3.transaction-savepoints-of-mysql-mode/1.mark-a-savepoint-of-mysql-mode.md
@@ -42,6 +42,6 @@ Query OK, 0 rows affected
 
 ## 相关文档
 
-* [回滚事务到某个保存点](2.rollback-to-a-savepoint.md)
+* [回滚事务到某个保存点](2.rollback-to-a-savepoint-of-mysql-mode.md)
 
-* [释放保存点](3.release-a-savepoint.md)
+* [释放保存点](3.release-a-savepoint-of-mysql-mode.md)
