--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/5.user-password-error-with-error-code-1045-of-mysql-mode.md
@@ -20,7 +20,7 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
 
 * 兼容 MySQL 错误码：1045
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-for-mysql/1.use-error-information-1.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 ## 解决方法
 
@@ -41,7 +41,7 @@ ERROR 1045 (42000): Access denied for user 'ny1'@'xxx.xxx.xxx.xxx' (using passwo
 
    >**说明**
    >
-   >为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 [设置密码复杂度](7.reference\2.manage-guide\2.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\2.set-password-complexity-1.md)。
+   >为用户设置密码时，用户密码需要符合当前租户的密码复杂度。密码复杂度相关操作及说明请参见 [设置密码复杂度](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/2.set-password-complexity-of-mysql-mode.md)。
 
 3. 再次使用用户 `ny1` 登录数据库。
 
