--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/9.foreign-key-conflict-with-error-code-1215-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/6.common-errors-and-solutions-of-mysql-mode/9.foreign-key-conflict-with-error-code-1215-of-mysql-mode.md
@@ -19,7 +19,7 @@ ERROR 1215 (HY000): Cannot add foreign key constraint
 
 * 兼容 MySQL 错误码：1215
 
-有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-for-mysql/1.use-error-information-1.md)。
+有关错误码的详细说明及介绍，请参见 [错误码概述](../../../7.reference/5.system-reference/6.error-code-of-mysql-mode/1.use-error-information-of-mysql-mode.md)。
 
 ## 可能原因
 
