--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -12,25 +12,25 @@
 
 * 非分区表只有一个分区。
 
-更多表的介绍请参见 [表概述](7.reference\5.concepts-of-oceanbase-database-system-old\4.database-objects-1\2.mysql\2.table-1\1.table-overview-1.md)。
+更多表的介绍请参见 [表概述](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/2.table-of-mysql-mode/1.table-overview-of-mysql-mode.md)。
 
 ## 表创建准备
 
 在创建表前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-mysql/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   >**说明**
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有 CREATE 权限，查看当前用户权限的相关操作请参见 [查看用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md)。
+* 请确认您已拥有 CREATE 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
-* 请确认已创建数据库，创建数据库的操作请参见 [创建数据库](1.create-a-database.md)。
+* 请确认已创建数据库，创建数据库的操作请参见 [创建数据库](1.create-a-database-of-mysql-mode.md)。
 
 ## 创建表
 
-请使用 [CREATE TABLE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/16.create-table.md) 语句创建表，并参考以下内容完成表的创建。
+请使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 语句创建表，并参考以下内容完成表的创建。
 
 ### 定义表名
 
@@ -55,7 +55,7 @@ Query OK, 0 rows affected
 
 * 根据数据类型的特点，为待存储在列中的数据选择合适的数据类型。
 
-  OceanBase 数据库 MySQL 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/1.data-type/1.data-type-overview.md)。
+  OceanBase 数据库 MySQL 模式中支持的数据类型及详细介绍请参见 [数据类型概述](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md)。
 
 * 对于字符串数据，建议使用变长字符串数据类型，并指定最大长度。请确保指定的最大长度大于需要存储的最大字符数，避免超出最大长度时出现字符截断现象。
 
@@ -69,13 +69,13 @@ Query OK, 0 rows affected
 
 主键值规则（Primary Key Value Rule）是定义在某一键 Key（键指一列或一个列集）上的规则，其作用是确保表内的每一数据行都可以由某一个键值唯一地确定。每个数据库表上最多只能定义一个 `PRIMARY KEY` 约束。构成此约束的列（一列或多列）的值可以作为一行数据的唯一标识符，即每个数据行可以由此主键值命名。
 
-要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/16.create-table.md) 语句中所有列的列表之后再添加主键约束的定义。
+要指定某一列为主键列，请在该列的定义后添加 `PRIMARY KEY` 关键字。如果要在多列上定义主键约束，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 语句中所有列的列表之后再添加主键约束的定义。
 
 以下是定义主键列时需要遵循的要求：
 
 * 建议为表定义一个主键，每个数据库表最多拥有一个主键列集合。
 
-  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，可以在创建表时不指定主键，待表创建成功后系统会为无主键表指定自增列作为隐藏主键。有关自增列的详细介绍请参见 [定义表的自增列](7.reference\2.manage-guide\3.database-object-management-1\2.mysql-4\2.manage-tables-2\3.define-an-auto-increment-column-2.md)。
+  在 OceanBase ​数据库中，不强制用户为表定义主键，但使用主键可以使表内的每行数据被唯一确定，且不存在重复的数据行。如果没有合适的字段作为主键，可以在创建表时不指定主键，待表创建成功后系统会为无主键表指定自增列作为隐藏主键。有关自增列的详细介绍请参见 [定义表的自增列](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md)。
 
   此外，如果在创建时未定义主键列， OceanBase 数据库支持为已存在的表添加主键列。
 
@@ -87,7 +87,7 @@ Query OK, 0 rows affected
 
 * 建议明确标识主键约束的名称。例如，主键约束命名为 “PK_xxx”。
 
-更多主键约束相关的介绍，请参见 [主键约束](../../../7.reference/4.concepts-of-oceanbase-database-system/4.database-objects-1/2.mysql/7.data-integrity-1/2.integrity-constraint-type-1/4.primary-key-constraint-1.md)。
+更多主键约束相关的介绍，请参见 [主键约束](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/7.data-integrity-of-mysql-mode/2.integrity-constraint-type-of-mysql-mode/4.primary-key-constraint-of-mysql-mode.md)。
 
 示例 2：在多列上定义主键约束。
 
@@ -107,7 +107,7 @@ obclient> desc test;
 
 示例 2 中，定义了 `c1`、`c2` 列为主键列，且约束名称为 `PK_c1_c2`。 `c1`、`c2` 列的值不允许为 `NULL` 并且必须是不重复的。
 
-定义主键列后，支持删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](7.reference\3.user-guide-old\7.database-object-management-1\2.mysql-4\2.manage-tables-2\4.define-the-constraint-type-for-a-column-2.md)。
+定义主键列后，支持删除主键，更多主键约束相关的操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md)。
 
 ### 定义其他列约束
 
@@ -125,7 +125,7 @@ obclient> desc test;
 
   创建外键约束时，如果不指定外键名，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBFK_创建时间戳`。例如，`t1_OBFK_1627747200000000`。
 
-  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/14.system-reference/2.system-variable-for-mysql/27.foreign_key_checks-1-2-3.md)。
+  OceanBase 数据库默认开启了外键约束检查，外键约束检查开关由租户变量 `foreign_key_checks` 来控制。`foreign_key_checks` 变量的更多说明，请参见 [foreign_key_checks](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/27.foreign_key_checks-of-mysql-mode.md)。
   
 * `CHECK` 约束：要求数据库中某列的值符合指定的条件。
 
@@ -133,7 +133,7 @@ obclient> desc test;
 
   创建 `CHECK` 约束时，如果未指定约束名称，系统会自动分配一个约束名，自动分配的约束名为 `表名_OBCHECK_创建时间戳`，例如，`t1_OBCHECK_1629350823880271`。
 
-要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/16.create-table.md) 语句中所有列的列表之后再添加整个约束的定义。
+要约束单个列，请在该列的定义中添加一个约束关键字，如果要约束多个列，请在 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 语句中所有列的列表之后再添加整个约束的定义。
 
 以下是定义其他列约束时需要遵循的要求：
 
@@ -220,7 +220,7 @@ Query OK, 1 row affected
 
 示例 6 中，由于 `col1` 列添加了 `CHECK` 约束，后续插入列 `col1` 的值不大于 `10` 时就会报错。
 
-定义其他列约束的详细操作请参见 [定义列的约束类型](7.reference\3.user-guide-old\7.database-object-management-1\2.mysql-4\2.manage-tables-2\4.define-the-constraint-type-for-a-column-2.md)。
+定义其他列约束的详细操作请参见 [定义列的约束类型](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md)。
 
 ### 定义表的自增列
 
@@ -234,7 +234,7 @@ Query OK, 1 row affected
 | auto_increment_increment  | Session 级变量，用于设置自增步长，取值范围为 \[1, 65535\]，默认值为 `1`。                    |
 | auto_increment_offset     | Session 级变量，用于确定 `AUTO_INCREMENT` 列值的起点，取值范围为 \[1, 65535\]，默认值为 `1`。 |
 
-您可以根据业务需要，修改这三个系统变量的值，修改系统变量的操作请参见 [系统变量概述](../../../7.reference/14.system-reference/2.system-variable-for-mysql/1.overview-of-system-variables-3.md)。
+您可以根据业务需要，修改这三个系统变量的值，修改系统变量的操作请参见 [系统变量概述](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)。
 
 以下是定义自增列需要遵循的要求：
 
@@ -275,7 +275,7 @@ obclient> SELECT * FROM personal_info;
 3 rows in set
 ```
 
-更多自增列的介绍和详细操作请参见 [定义自增列](7.reference\3.user-guide-old\7.database-object-management-1\2.mysql-4\2.manage-tables-2\3.define-an-auto-increment-column-2.md)。
+更多自增列的介绍和详细操作请参见 [定义自增列](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/3.define-an-auto-increment-column-of-mysql-mode.md)。
 
 ### 选择分区方案
 
@@ -293,7 +293,7 @@ obclient> SELECT * FROM personal_info;
 
 按照分区维度，分区表又可以分为一级分区和二级分区，二级分区是一级分区的二次拆分，因此一级分区表有一个分区键，二级分区表有两个分区键，并且两次拆分的策略可以不一样。在 OceanBase 数据库中，二级分区表包括模板化二级分区表和非模板化二级分区表。
 
-关于分区相关的详细介绍请参见 [分区](../../../7.reference/1.concepts-of-oceanbase-database-system/4.database-objects-1/2.mysql\4.partition-2/1.partition-overview-4.md)。
+关于分区相关的详细介绍请参见 [分区概述](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/4.partition-of-mysql-mode/1.partition-overview-of-mysql-mode.md)。
 
 **Range 分区/Range Columns 分区**
 
@@ -376,7 +376,7 @@ Query OK, 0 rows affected
 
 Range 分区、Range Columns 分区、List 分区、List Columns 分区、Hash 分区 和 key 分区均可以作为组合分区表的二级分区策略。在 OceanBase 数据库中，二级分区表包括模板化二级分区表和非模板化二级分区表。
 
-下面通过几个简单示例，简单介绍二级分区表的创建方法。本文仅提供部分建表示例，分区表的详细语法及示例请参见 [创建分区表](7.reference\3.user-guide-old\8.distributed-storage-management\2.manage-partition-table\2.mysql-1\2.create-a-partition-table.md)。
+下面通过几个简单示例，简单介绍二级分区表的创建方法。本文仅提供部分建表示例，分区表的详细语法及示例请参见 [创建分区表](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/2.create-a-partition-table-of-mysql-mode.md)。
 
 示例 11：创建模板化 Range Columns + Range 分区表。
 
@@ -470,8 +470,8 @@ Query OK, 0 rows affected
 
 ## 后续处理
 
-* [创建表组](2.create-a-tablegroup.md)
+* [创建表组](2.create-a-tablegroup-of-mysql-mode.md)
 
-* [创建索引](4.create-a-index.md)
+* [创建索引](4.create-a-index-of-mysql-mode.md)
 
-* [管理分区](7.reference\3.user-guide-old\8.distributed-storage-management\2.manage-partition-table\2.mysql-1\1.partition-overview-6.md)
+* [管理分区](../../../7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md)
