--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
@@ -6,7 +6,7 @@
 
 在替换表数据前，请确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../../1.application-development-based-on-mysql-mode/1.database-connection/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   >**说明**
   >
