--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/1.create-a-database-of-mysql-mode.md
@@ -14,17 +14,17 @@
 
 在创建数据库前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-of-mysql/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   >**说明**
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有 `CREATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/3.mysql-3/4.view-user-permissions-1.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.manage-guide/2.basic-database-management/4.manage-tenants-1/5.manage-users-and-permissions/3.mysql-3/5.modify-user-permissions-2.md)。
+* 请确认您已拥有 `CREATE` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 创建数据库
 
-请使用 [CREATE DATABASE](../../../7.reference\6.sql-syntax\2.common-tenant-mysql-mode\6.sql-statement\11.create-database.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
+请使用 [CREATE DATABASE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/11.create-database-of-mysql-mode.md) 语句创建数据库。然后根据数据库创建建议，参考本文的示例来完成数据库的创建。
 
 ## 数据库创建建议
 
@@ -32,10 +32,10 @@
 
 * 在 OceanBase 数据库中，每个数据库的名称必须保证全局唯一。
 
-* 应避免使用保留关键字作为数据库名，OceanBase 数据库 MySQL 模式的保留关键字请参见 [预留关键字](../../../7.reference/14.system-reference/8.reserved-keyword-in-mysql-mode.md)。
+* 应避免使用保留关键字作为数据库名，OceanBase 数据库 MySQL 模式的保留关键字请参见 [预留关键字](../../../7.reference/5.system-reference/8.reserved-keyword-of-mysql-mode.md)。
 
 * 为了适应业务的长远发展，数据库的字符集编码需要能够存储绝大多数的字符，建议创建数据库时使用 `UTF8` 字符集编码。
-  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-mysql-mode/1.basic-elements/3.character-set-and-collation/4.specify-character-set-and-collation.md)。
+  数据库支持的字符集编码相关内容请参见 [数据库级字符集](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/4.specify-character-set-and-collation-of-mysql-mode.md)。
 
 ## 示例
 
@@ -92,6 +92,6 @@ obclient [mwx]> SHOW CREATE DATABASE test4;
 
 ## 相关阅读
 
-* [创建表](3.create-a-table.md)
+* [创建表](3.create-a-table-of-mysql-mode.md)
 
-* [创建表组](2.create-a-tablegroup.md)
+* [创建表组](2.create-a-tablegroup-of-mysql-mode.md)
