--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/4.create-a-index-of-mysql-mode.md
@@ -26,7 +26,7 @@
 
 在创建索引前，您需要确认以下事项：
 
-* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../../1.application-development-based-on-mysql-mode/1.database-connection/1.connection-mode-overview.md)。
+* 请确认您已连接到数据库的 MySQL 租户，连接数据库的操作请参见 [连接数据库](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)。
   
   >**说明**
   >
