--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
@@ -12,7 +12,7 @@
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md)。
+* 请确认您已拥有待操作的表的 `DELETE` 权限。如果使用 `TRUNCATE TABLE` 语句清空表数据，则还需要拥有该表的 `CREATE` 权限。查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 使用 DELETE 语句删除数据
 
@@ -20,7 +20,7 @@
 
 >**说明**
 >
->除了 `DELETE` 语句外，`REPLACE INTO` 语句也可能会删除数据，`REPLACE INTO` 语句相关的操作及示例请参见 [替换数据](4.replace-data.md)。
+>除了 `DELETE` 语句外，`REPLACE INTO` 语句也可能会删除数据，`REPLACE INTO` 语句相关的操作及示例请参见 [替换数据](4.replace-data-of-mysql-mode.md)。
 
 简单的 `DELETE` 语句的语法格式如下：
 
@@ -89,8 +89,8 @@ obclient [test]> TRUNCATE TABLE t_insert;
 
 ## 相关文档
 
-* [插入数据](1.insert-data.md)
+* [插入数据](1.insert-data-of-mysql-mode.md)
 
 * [更新数据](2.update-data.md)
 
-* [替换数据](4.replace-data.md)
+* [替换数据](4.replace-data-of-mysql-mode.md)
