--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/1.about-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/1.about-query-of-mysql-mode.md
@@ -38,4 +38,4 @@ obclient> SELECT '中', 6*6 ;
 1 row in set
 ```
 
-关于查询语句的详细用法，请参见 [SELECT](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/51.SELECT-1-2/1.SELECT.md)。
+关于查询语句的详细用法，请参见 [SELECT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/51.select-of-mysql-mode/1.select-of-mysql-mode.md)。
