--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/1.inner-join-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/1.inner-join-of-mysql-mode.md
@@ -149,8 +149,8 @@ obclient> SELECT tbl1.id, tbl1.name, tbl2.id, tbl2.name FROM tbl1 INNER JOIN tbl
 
 ## 相关文档
 
-* [FULL JOIN](2.full-join.md)
+* [FULL JOIN](2.full-join-of-mysql-mode.md)
 
-* [LEFT JOIN](3.left-join.md)
+* [LEFT JOIN](3.left-join-of-mysql-mode.md)
 
-* [RIGHT JOIN](4.right-join.md)
+* [RIGHT JOIN](4.right-join-of-mysql-mode.md)
