--- a/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/6.change-table-of-mysql-mode.md
@@ -328,4 +328,4 @@ obclient> ALTER TABLE test RENAME TO t1;
 obclient> RENAME TABLE test TO t1;
 ```
 
-更多 `ALTER TABLE` 语句的介绍，请参见 [ALTER TABLE](../../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/6.alter-table.md)。
+更多 `ALTER TABLE` 语句的介绍，请参见 [ALTER TABLE](../../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/6.alter-table-of-mysql-mode.md)。
