--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
@@ -12,7 +12,7 @@
   >
   >当前登录租户所属的租户模式可以由 `sys` 租户通过查询 `oceanbase.DBA_OB_TENANTS` 视图进行确认。
 
-* 请确认您已拥有待操作的表的 `INSERT` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\4.view-user-permissions-1.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](7.reference\3.user-guide-old\6.basic-database-management\4.manage-tenants-1\5.manage-users-and-permissions\3.mysql-3\5.modify-user-permissions-2.md)。
+* 请确认您已拥有待操作的表的 `INSERT` 权限，查看当前用户权限的相关操作请参见 [查看用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/4.view-user-permissions-of-mysql-mode.md)。如果不具备该权限，请联系管理员为您授权，用户授权的相关操作请参见 [修改用户权限](../../../7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.manage-users-and-permissions/3.mysql-mode/5.modify-user-permissions-of-mysql-mode.md)。
 
 ## 使用 INSERT 语句插入数据
 
@@ -217,7 +217,7 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 ## 使用其他语句插入数据
 
-除了 `INSERT` 语句，当表中无数据记录，或者表中有数据记录但无主键或唯一键冲突时，还可以使用 `REPLACE INTO` 语句代替 `INSERT` 语句插入数据。`REPLACE INTO` 语句的详细语法及说明请参见 [REPLACE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/46.REPLACE.md)。
+除了 `INSERT` 语句，当表中无数据记录，或者表中有数据记录但无主键或唯一键冲突时，还可以使用 `REPLACE INTO` 语句代替 `INSERT` 语句插入数据。`REPLACE INTO` 语句的详细语法及说明请参见 [REPLACE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/46.replace-of-mysql-mode.md)。
 
 示例：
 
@@ -272,6 +272,6 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 * [更新数据](2.update-data.md)
   
-* [删除数据](3.delete-data.md)
+* [删除数据](3.delete-data-of-mysql-mode.md)
 
-* [替换数据](4.replace-data.md)
+* [替换数据](4.replace-data-of-mysql-mode.md)
