--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
@@ -236,6 +236,6 @@ obclient> SELECT empname, empno, job, mgr, hiredate, sal,comm, deptno FROM emp;
     6 rows in set
     ```
 
-此外，指定列的查询还支持 `WHERE` 条件查询，请参见 [条件查询](3.conditional-query.md)。
+此外，指定列的查询还支持 `WHERE` 条件查询，请参见 [条件查询](3.conditional-query-of-mysql-mode.md)。
 
-更多查询方法请参见 [在查询中使用操作符和函数](8.use-operators-and-functions-in-query/1.use-arithmetic-operators-in-queries.md)。
+更多查询方法请参见 [在查询中使用操作符和函数](8.use-operators-and-functions-in-query-of-mysql-mode/1.use-arithmetic-operators-in-queries-of-mysql-mode.md)。
