--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/4.right-join-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/4.right-join-of-mysql-mode.md
@@ -8,7 +8,7 @@
 
 外联接包括全联接（FULL JOIN）、左联接（LEFT JOIN）和右联接（RIGHT JOIN）。外联接返回满足联接条件的所有行，同时从一个表返回没有使用的行，在另一个表相应位置填充 `NULL`。
 
-本文主要提供右联接的示例指导，左联接相关示例请参见 [全联接](2.outter-join.md，右联接相关示例请参见 [左联接](3.left-join.md)。
+本文主要提供右联接的示例指导，左联接相关示例请参见 [全联接](2.outter-join.md，右联接相关示例请参见 [左联接](3.left-join-of-mysql-mode.md)。
 
 ## RIGHT JOIN 语法
 
@@ -125,6 +125,6 @@ obclient> SELECT * FROM tbl_a RIGHT JOIN tbl_b ON tbl_a.id=tbl_b.number WHERE tb
 
 * [INNER JOIN](1.inner-join.md)
 
-* [FULL JOIN](2.full-join.md)
+* [FULL JOIN](2.full-join-of-mysql-mode.md)
 
-* [LEFT JOIN](3.left-join.md)
+* [LEFT JOIN](3.left-join-of-mysql-mode.md)
