--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/2.update-data-of-oracle-mode.md
@@ -131,8 +131,8 @@ Rows matched: 1  Changed: 1  Warnings: 0
 
 ## 相关文档
 
-* [插入数据](1.insert-data.md)
+* [插入数据](1.insert-data-of-mysql-mode.md)
 
-* [删除数据](3.delete-data.md)
+* [删除数据](3.delete-data-of-mysql-mode.md)
 
-* [替换数据](4.replace-data.md)
+* [替换数据](4.replace-data-of-mysql-mode.md)
