--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/2.create-a-tablegroup-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/2.create-a-tablegroup-of-mysql-mode.md
@@ -84,7 +84,7 @@ Create Tablegroup: CREATE TABLEGROUP IF NOT EXISTS `tgn`  BINDING = FALSE
 1 row in set
 ```
 
-表组创建后，可以使用 `ALTER TABLE table_name SET TABLEGROUP tablegroup_name;` 语句将已创建的表加入到表组中。也可以先创建表组，再使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 语句创建与表组分区方式相同的表，并通过 `TABLEGROUP` 属性指定表所属的表组。管理非分区表组的详细操作请参见 [管理表组](7.reference\3.user-guide-old\7.database-object-management-1\2.mysql-4\3.manage-a-table-group-2\2.table-group-management-statements-2.md)。
+表组创建后，可以使用 `ALTER TABLE table_name SET TABLEGROUP tablegroup_name;` 语句将已创建的表加入到表组中。也可以先创建表组，再使用 [CREATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/16.create-table-of-mysql-mode.md) 语句创建与表组分区方式相同的表，并通过 `TABLEGROUP` 属性指定表所属的表组。管理非分区表组的详细操作请参见 [管理表组](暂不支持)。
 
 例如，本示例中，如果先创建了表组 `tgn`，则可以使用以下语句创建表并指定表组，语句如下。
 
