--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/3.delete-data-of-mysql-mode.md
@@ -16,7 +16,7 @@
 
 ## 使用 DELETE 语句删除数据
 
-通常使用 [DELETE](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/21.DELETE.md) 语句来删除表中的部分数据或全部数据。
+通常使用 [DELETE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/21.delete-of-mysql-mode.md) 语句来删除表中的部分数据或全部数据。
 
 >**说明**
 >
@@ -85,12 +85,12 @@ TRUNCATE [TABLE] table_name;
 obclient [test]> TRUNCATE TABLE t_insert;
 ```
 
-更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-mysql-mode/6.sql-statement/59.truncate-table.md)。
+更多 `TRUNCATE TABLE` 语句的使用及说明请参见 [TRUNCATE TABLE](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/59.truncate-table-of-mysql-mode.md)。
 
 ## 相关文档
 
 * [插入数据](1.insert-data-of-mysql-mode.md)
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-mysql-mode.md)
 
 * [替换数据](4.replace-data-of-mysql-mode.md)
