--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/4.replace-data-of-mysql-mode.md
@@ -173,6 +173,6 @@ obclient [test]> SELECT * FROM t_replace;
 
 * [插入数据](1.insert-data-of-mysql-mode.md)
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-mysql-mode.md)
 
 * [删除数据](3.delete-data-of-mysql-mode.md)
