--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/1.insert-data-of-oracle-mode.md
@@ -153,7 +153,7 @@ obclient [SYS]> SELECT * FROM t_insert_bak;
 
 ## 使用 MERGE INO 语句插入数据
 
-在批处理任务中，可能需要对目标表进行大量的 `INSERT` 操作。当待插入的数据在表记录中不存在时，也可以使用 `MERGE INTO` 语句将源表的记录插入到目标表中，具体操作及示例请参见 [替换数据](4.replace-data-of-mysql-mode.md)。
+在批处理任务中，可能需要对目标表进行大量的 `INSERT` 操作。当待插入的数据在表记录中不存在时，也可以使用 `MERGE INTO` 语句将源表的记录插入到目标表中，具体操作及示例请参见 [替换数据](4.replace-data-of-oracle-mode.md)。
 
 >**说明**
 >
@@ -162,8 +162,8 @@ obclient [SYS]> SELECT * FROM t_insert_bak;
 
 ## 相关文档
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-oracle-mode.md)
   
-* [删除数据](3.delete-data-of-mysql-mode.md)
+* [删除数据](3.delete-data-of-oracle-mode.md)
 
-* [替换数据](4.replace-data-of-mysql-mode.md)
+* [替换数据](4.replace-data-of-oracle-mode.md)
