--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/4.replace-data-of-oracle-mode.md
@@ -180,8 +180,8 @@ obclient [SYS]> SELECT * FROM t_insert;
 
 ## 相关文档
 
-* [插入数据](1.insert-data-of-mysql-mode.md)
+* [插入数据](1.insert-data-of-oracle-mode.md)
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-oracle-mode.md)
 
-* [删除数据](3.delete-data-of-mysql-mode.md)
+* [删除数据](3.delete-data-of-oracle-mode.md)
