--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/2.full-join-of-oracle-mode.md
@@ -126,8 +126,8 @@ obclient [SYS]> SELECT * FROM tbl_a FULL JOIN tbl_b ON tbl_a.id=tbl_b.num WHERE 
 
 ## 相关文档
 
-* [INNER JOIN](1.inner-join.md)
+* [INNER JOIN](1.inner-join-of-oracle-mode.md)
 
-* [LEFT JOIN](3.left-join-of-mysql-mode.md)
+* [LEFT JOIN](3.left-join-of-oracle-mode.md)
 
-* [RIGHT JOIN](4.right-join-of-mysql-mode.md)
+* [RIGHT JOIN](4.right-join-of-oracle-mode.md)
