--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/1.insert-data-of-mysql-mode.md
@@ -16,7 +16,7 @@
 
 ## 使用 INSERT 语句插入数据
 
-请使用 [INSERT](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) 语句，再参考下面的建议，向表中插入数据。
+请使用 [INSERT](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/2.string-functions-of-mysql-mode/14.insert-of-mysql-mode.md) 语句，再参考下面的建议，向表中插入数据。
 
 `INSERT` 语句的语法格式如下：
 
@@ -163,7 +163,7 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 示例：
 
-* 通过  [`INSERT IGNORE INTO`](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) 语句避免约束冲突时，`IGNORE` 关键字可以忽略由于约束冲突导致的 `INSERT` 失败的影响。
+* 通过  [`INSERT IGNORE INTO`](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/2.string-functions-of-mysql-mode/14.insert-of-mysql-mode.md) 语句避免约束冲突时，`IGNORE` 关键字可以忽略由于约束冲突导致的 `INSERT` 失败的影响。
 
   ```sql
   obclient [test]> INSERT IGNORE INTO t_insert(id, name, value) 
@@ -188,7 +188,7 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
   >
   >该方法仅忽略报错数据，并不会影响实际插入行为。
 
-* 通过 [`INSERT INTO ON DUPLICATE KEY UPDATE`](../../../7.reference/6.sql-syntax/2.common-tenant-mysql-mode/4.functions/2.functions-1/2.string-functions/14.INSERT-1-2-3-4.md) 语句避免约束冲突时，可以指定对重复主键或唯一键的后续处理。
+* 通过 [`INSERT INTO ON DUPLICATE KEY UPDATE`](../../../7.reference/4.development-guide-refactoring/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/2.functions-of-mysql-mode/2.string-functions-of-mysql-mode/14.insert-of-mysql-mode.md) 语句避免约束冲突时，可以指定对重复主键或唯一键的后续处理。
 
   >**说明**
   >
@@ -270,7 +270,7 @@ ERROR 1062 (23000): Duplicate entry '3' for key 'PRIMARY'
 
 ## 相关文档
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-mysql-mode.md)
   
 * [删除数据](3.delete-data-of-mysql-mode.md)
 
