--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/3.left-join-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/3.left-join-of-mysql-mode.md
@@ -125,7 +125,7 @@ obclient> SELECT * FROM tbl_a LEFT JOIN tbl_b ON tbl_a.id=tbl_b.number WHERE tbl
 
 ## 相关文档
 
-* [INNER JOIN](1.inner-join.md)
+* [INNER JOIN](1.inner-join-of-mysql-mode.md)
 
 * [FULL JOIN](2.full-join-of-mysql-mode.md)
 
