--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/3.write-data-of-oracle-mode/3.delete-data-of-oracle-mode.md
@@ -105,8 +105,8 @@ obclient> TRUNCATE TABLE t_insert;
 
 ## 相关文档
 
-* [插入数据](1.insert-data-of-mysql-mode.md)
+* [插入数据](1.insert-data-of-oracle-mode.md)
 
-* [更新数据](2.update-data.md)
+* [更新数据](2.update-data-of-oracle-mode.md)
 
-* [替换数据](4.replace-data-of-mysql-mode.md)
+* [替换数据](4.replace-data-of-oracle-mode.md)
