--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/3.left-join-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/3.left-join-of-oracle-mode.md
@@ -122,8 +122,8 @@ obclient [SYS]> SELECT tbl_a.id, tbl_a.name, tbl_b.num, tbl_b.value FROM tbl_a L
 
 ## 相关文档
 
-* [INNER JOIN](1.inner-join.md)
+* [INNER JOIN](1.inner-join-of-oracle-mode.md)
 
-* [FULL JOIN](2.full-join-of-mysql-mode.md)
+* [FULL JOIN](2.full-join-of-oracle-mode.md)
 
-* [RIGHT JOIN](4.right-join-of-mysql-mode.md)
+* [RIGHT JOIN](4.right-join-of-oracle-mode.md)
