--- a/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
+++ b/zh-CN/3.develop/2.application-development-of-oracle-mode/4.read-data-of-oracle-mode/7.multi-table-join-query-of-oracle-mode/4.right-join-of-oracle-mode.md
@@ -107,8 +107,8 @@ obclient> SELECT t1.id, t1.name, t2.id, t2.name FROM t1
 
 ## 相关文档
 
-* [INNER JOIN](1.inner-join.md)
+* [INNER JOIN](1.inner-join-of-oracle-mode.md)
 
-* [FULL JOIN](2.full-join-of-mysql-mode.md)
+* [FULL JOIN](2.full-join-of-oracle-mode.md)
 
-* [LEFT JOIN](3.left-join-of-mysql-mode.md)
+* [LEFT JOIN](4.right-join-of-oracle-mode.md)
